# kso

./: .gitignore  .gitmodules  .pylintrc  5_Colab_Train_Koster_ML_models.ipynb  Dockerfile  README.md  auto-tests.py  conda_env.yaml  gpu_requirements_user.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_cdn.txt  requirements_colab.txt  train.py  whitelist.py
.github/workflows/: build-and-test-container.yml  build-container.yml  build-docker.yml  code-quality.yml  deploy-to-dockerhub.yml  deploy-to-ghcr.yml  detect-unused-code.yml  linting.yml  part1.yml  part2.yml  part3.yml  test_without_docker_build.yml
Colab/: 5_Colab_Train_Koster_ML_models.ipynb  6_Evaluate_ML_Models.ipynb
Documents/Succesful_Training/: events.out.tfevents.1716995583.cdn-instance-broker-prod.39545.0  results.csv
KSO_SAGA_SE_ModelR/labels/: G0010080.txt  G0010081.txt  G0010085.txt  G0010086.txt  G0010087.txt  G0010088.txt  (+478 more)
db_starter/: schema.py
kso_utils/: .gitignore  .readthedocs.yaml  LICENSE  README.md  db_utils.py  frame_utils.py  koster_utils.py  movie_utils.py  project.py  project_utils.py  pyproject.toml  server_utils.py  sgu_utils.py  spyfish_utils.py  tutorials_utils.py  video_reader.py  widgets.py  yolo_utils.py  zenodo_utils.py  zooniverse_utils.py
notebooks/: 02_Upload_new_footage.ipynb  03_Upload_clips_to_Zooniverse.ipynb  04_Upload_frames_to_Zooniverse.ipynb  05_Train_ML_models.ipynb  06_Evaluate_ML_Models.ipynb  07_Transfer_ML_Models.ipynb  08_Analyse_Aggregate_Zooniverse_Annotations.ipynb  09_Run_ML_Models_on_footage.ipynb  5. Train Koster ML models.ipynb  6. Evaluate ML models.ipynb  6. Train Koster ML models.ipynb
src/: autobackend.py  data_utils.py  db_utils.py  detect.py  frame_tracker.py  frcnn_detect.py  multi_tracker_zoo.py  nn_matching.py  prepare_dataset.py  prepare_input.py  prepare_zooniverse.py  track.py  track_yolo.py  upsampling.py
test/: conftest.py  notebook-tests.py  widget-tests.py
tutorial_utils/: db_utils.py  frame_utils.py  koster_utils.py  movie_utils.py  server_utils.py  spyfish_utils.py  t12_utils.py  t13_utils.py  t6_utils.py  zooniverse_utils.py
tutorials/: 01_Check_and_update_csv_files.ipynb  02_Upload_new_footage.ipynb  03_Upload_clips_to_Zooniverse.ipynb  04_Upload_frames_to_Zooniverse.ipynb  05_Train_ML_models.ipynb  05_Train_YOLO_models.ipynb  06_Evaluate_ML_Models.ipynb  07_Transfer_ML_Models.ipynb  08_Analyse_Aggregate_Zooniverse_Annotations.ipynb  09_Download_processed_Zooniverse_classifications.ipynb  09_Run_ML_Models_on_footage.ipynb  10_Run_ML_Models_on_footage.ipynb  5_Train_YOLO_models.ipynb  6_Evaluate_ML_Models.ipynb  7_Transfer_ML_Models.ipynb
(+433 files in other folders)
